--- a/css/product.css
+++ b/css/product.css
@@ -245,12 +245,22 @@
 
 
 
-@media only screen and (max-width: 500px) {}
+@media only screen and (max-width: 500px) {
+    .swiper.myproductSwiper {
+        width: 100%;
+        height: 594px;
+    }
+}
 
 
 
 
 @media only screen and (max-width: 420px) {
+
+    .swiper.myproductSwiper {
+        width: 100%;
+        height: 440px;
+    }
 
     .plus-icon::before,
     .plus-icon::after {
