--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,7 @@ body {
 
 .swiper {
     width: 550px;
-    height: 696px;
+    height: 729px;
     margin-left: 0;
     display: none;
     margin: 0 20px;
@@ -463,6 +463,16 @@ body {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
+}
+
+
+.swiper.mySwiper .swiper-horizontal>.swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+    bottom: -7px;
+    left: 0;
+    width: 100%;
 }
 
 .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
@@ -750,8 +760,8 @@ body {
         padding: 0 14px;
     }
 
-    .product {
-        background: none;
+    .product-bg::after {
+        background-image: none;
     }
 
     .swiper {
@@ -832,6 +842,24 @@ body {
         top: -40px;
         height: 168px;
         width: 259px;
+    }
+
+    .swiper {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
+    .swiper.mySwiper .swiper-horizontal>.swiper-pagination-bullets,
+    .swiper-pagination-bullets.swiper-pagination-horizontal,
+    .swiper-pagination-custom,
+    .swiper-pagination-fraction {
+        bottom: 1%;
+    }
+
+    .swiper-button-next:after,
+    .swiper-button-prev:after {
+        font-size: 28px;
     }
 
     .swiper.advantageSwiper {
@@ -988,10 +1016,9 @@ body {
     }
 
     .swiper {
-        width: 301px;
-        height: 445px;
-        margin-left: 0px;
-        margin-top: 17px;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
     }
 
     .swiper-horizontal>.swiper-pagination-bullets,
@@ -1047,10 +1074,11 @@ body {
 
     .swiper.mySwiperTwo {
         display: block;
-        margin-left: 5px;
+        margin-left: auto;
+        margin-right: auto;
         margin-top: 30px;
         width: 281px;
-        height: 568px;
+        height: auto;
         padding: 4px 9px;
     }
 
