--- a/css/output.css
+++ b/css/output.css
@@ -625,11 +625,6 @@ html {
   margin-bottom: 90px;
 }
 
-.my-7 {
-  margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
-}
-
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -907,10 +902,6 @@ html {
 
 .ml-7 {
   margin-left: 1.75rem;
-}
-
-.mb-\[35\%\] {
-  margin-bottom: 35%;
 }
 
 .box-border {
@@ -1342,7 +1333,7 @@ html {
 }
 
 .bg-korzinabg {
-  background-color: rgba(24, 24, 24, 0.7);
+  background-color: #000000b3;
 }
 
 .bg-bgline {
@@ -2171,8 +2162,8 @@ html {
     margin-top: auto;
   }
 
-  .md\:mt-\[219px\] {
-    margin-top: 219px;
+  .md\:mb-\[35\%\] {
+    margin-bottom: 35%;
   }
 
   .md\:mt-16 {
@@ -2209,10 +2200,6 @@ html {
 
   .md\:mt-4 {
     margin-top: 1rem;
-  }
-
-  .md\:mb-\[35\%\] {
-    margin-bottom: 35%;
   }
 
   .md\:block {
@@ -2923,6 +2910,10 @@ html {
     margin-bottom: 0.75rem;
   }
 
+  .sm\:mb-\[44\%\] {
+    margin-bottom: 44%;
+  }
+
   .sm\:mt-12 {
     margin-top: 3rem;
   }
@@ -2961,10 +2952,6 @@ html {
 
   .sm\:ml-\[5\%\] {
     margin-left: 5%;
-  }
-
-  .sm\:mb-\[44\%\] {
-    margin-bottom: 44%;
   }
 
   .sm\:h-\[30px\] {
